Fixed overflow issue on signup

--- a/client/css/core.scss
+++ b/client/css/core.scss
@@ -256,6 +256,7 @@ h1 {
   width: calc(50%);
   padding: 11px 0px;
   position: relative;
+  margin-right: 0;
 }
 
 .question-option-right-text {
